tests/compile-fail/get-set-on-private-field.stderr
error[E0624]: method `field` is private
  --> tests/compile-fail/get-set-on-private-field.rs:29:11
   |
9  |         field: u32,
   |         ---------- private method defined here
...
29 |     input.field(&db);
   |           ^^^^^ private method

error[E0624]: method `set_field` is private
  --> tests/compile-fail/get-set-on-private-field.rs:30:11
   |
9  |         field: u32,
   |         ----- private method defined here
...
30 |     input.set_field(&mut db).to(23);
   |           ^^^^^^^^^ private method
